--- a/ChatBot/ChatBot.css
+++ b/ChatBot/ChatBot.css
@@ -3,7 +3,7 @@ body{
     font-family: arial;
     margin-top: 0px;
     margin-bottom: 0px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(6, 5, 5)
 }
 
 
@@ -78,4 +78,17 @@ body{
     flex-grow: 1;
     overflow: scroll;
     scrollbar-width: none;
+}
+
+.emptyChat{
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.loading-img{
+    height: 40px;
+    margin: -15px;
 }
